# 4wheeled_mobile_robot_

./: CMakeLists.txt  README.md  c_cpp_properties.json  package.xml
launch/: gazebo_model.launch.py
model/: robot.gazebo  robot.xacro
